# Pytest-Excercises

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
base/: intro.py
tests/: intro_test.py
