[tool.poetry]
name = "pytest-excercises"
version = "0.0.1"
description = "A project to learn PyTest"
authors = ["Ranga Reddy Nukala"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
